--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 fastapi==0.109.2
 uvicorn==0.27.1
-pandas==1.3.3
-numpy==1.21.2
-scikit-learn==0.24.2
+pandas==2.2.1
+numpy==1.26.4
+scikit-learn==1.4.1
 python-multipart==0.0.9
 pydantic==2.6.1
-flask==2.0.1
-flask-cors==3.0.10
+flask==3.0.2
+flask-cors==4.0.0
 scipy==1.7.1
 matplotlib==3.4.3
 seaborn==0.11.2
 openai==1.3.0
-python-dotenv==0.19.0 
+python-dotenv==0.19.0
+gunicorn==21.2.0 
