--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
+Flask==3.1.1
+Flask_Cors==4.0.0
+matplotlib==3.10.3
+numpy==1.24.4
+openai==1.82.1
+pandas==2.2.3
+pytest==7.4.3
+python-dotenv==1.1.0
+scikit_learn==1.4.0
+scipy==1.15.3
+seaborn==0.13.2
+gunicorn==21.2.0
 fastapi==0.109.2
 uvicorn==0.27.1
-pandas==2.2.1
-numpy==1.26.4
-scikit-learn==1.4.1
 python-multipart==0.0.9
 pydantic==2.6.1
-flask==3.0.2
-flask-cors==4.0.0
-scipy==1.7.1
-matplotlib==3.4.3
-seaborn==0.11.2
-openai==1.3.0
-python-dotenv==0.19.0
-gunicorn==21.2.0 
